fix flicker glitch (#248)
* fix flicker glitch

* fix incorrect selector

--- a/chrome/shrinking_pinned_tabs.css
+++ b/chrome/shrinking_pinned_tabs.css
@@ -21,3 +21,8 @@ See the above repository for updates as well as full license text. */
 .tab-label-container[pinned] {
   display: none;
 }
+
+/* Fixes flicker glitch. */
+scrollbox[part][orient="horizontal"] {
+    padding-inline: unset !important;
+}
